Si la Commande suivante est le Choix/EntrerUnNombre dont ce Message est la question et qu'il y a la place dans la Commande suivante pour afficher la question, passer tout de suite à la Commande suivante